# pwsh-host-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  pwsh-host.c
bindings/: Bindings.csproj
cmake/: yarc.cmake  yarc.ps1
dotnet/: Bindings.cs  Bindings.csproj
include/: coreclrhost.h  pwsh-host.h
src/: bindings.rs  cli_xml.rs  context.rs  delegate_loader.rs  detect.rs  error.rs  host_detect.rs  host_exit_code.rs  hostfxr.rs  ipwsh.rs  lib.rs  loader.rs  tests.rs  time.rs
src/pdcstring/: error.rs  mod.rs  other.rs  shared.rs  windows.rs
