[package]
name = "pwsh-host"
version = "0.2.0"
edition = "2018"
license = "MIT/Apache-2.0"
homepage = "https://github.com/awakecoding/pwsh-host-rs"
repository = "https://github.com/awakecoding/pwsh-host-rs"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>"]
keywords = ["dotnet", "pwsh", "host", "powershell"]
description = "Rust PowerShell Hosting Library"

[dependencies]
cfg-if = "0.1"
libc = "0.2"
thiserror = "1.0"
dlopen = "0.1"
dlopen_derive = "0.1"
num_enum = "0.5"
quick-error = "2.0"
which = { version = "3.0", default-features = false, features = [] }

[target.'cfg(windows)'.dependencies]
widestring = "0.4"
u16cstr = "0.2"

[target.'cfg(not(windows))'.dependencies]
cstr = "0.2"

[build-dependencies]
cmake = "0.1"
cc = "1.0"
